--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,8 @@ cmake_minimum_required(VERSION 3.16)
 find_package(iceoryx_hoofs QUIET)
 find_package(iceoryx_posh QUIET)
 
+option(BUILD_SHARED_LIBS "Create static libraries by default" OFF)
+
 # fetch iceoryx if not found
 if(NOT iceoryx_hoofs_FOUND OR NOT iceoryx_posh_FOUND)
     if(iceoryx_hoofs_FOUND)
